cmake_minimum_required(VERSION 3.24)
project(CF)

set(CMAKE_CXX_STANDARD 17)

add_executable(CF 676-C.cpp)
#add_executable(2Pointers "Find the longest substring of a string containing distinct characters.cpp" )
#add_executable(2Pointers 279-B.cpp )
#add_executable(2Pointers "Find the longest substring of a string containing `k` distinct characters.cpp" )
#add_executable(2Pointers main.cpp )
