cmake_minimum_required(VERSION 3.24)
project(CF)

set(CMAKE_CXX_STANDARD 17)

add_executable(CF 1343-C.cpp)
#add_executable(CF "Find maximum length sequence of continuous ones.cpp" )
#add_executable(CF 1354-B.cpp )
#add_executable(CF 676-C.cpp )
#add_executable(CF 2Pointers "Find the longest substring of a string containing distinct characters.cpp" )
#add_executable(CF 2Pointers 279-B.cpp )
#add_executable(CF 2Pointers "Find the longest substring of a string containing `k` distinct characters.cpp" )
#add_executable(CF 2Pointers main.cpp )
