cmake_minimum_required(VERSION 3.24)
project(Dynamic_Programming)

set(CMAKE_CXX_STANDARD 17)


add_executable(Dynamic_Programming
        main.cpp
        #main.cpp
        #CF2-116-C.cpp
        #AC-A_Frog_1.cpp
        #AC-A_Frog_2.cpp
        #AC-C-Vacation.cpp
        #coin_change_practice.cpp
        #CSES-Dice_Combinations.cpp
        #CSES-Minimizing_Coins.cpp
        #CSES-Coin_Combinations_I.cpp
        #CSES-Coin_Combinations_II.cpp
        #CSES-Two_Sets_II.cpp
        #AC-F_LCS.cpp
        #CSES-Edit_Distance.cpp
        #LIS.cpp
        #DP_LIS.cpp
        #CSES-Maximum_Subarray_Sum.cpp
        #CSES-Book_Shop.cpp
        #CSES-Money_Sums.cpp
        #CSES-Dice_Combinations_Iterative.cpp
        #CSES-Minimizing_Coins_Iterative.cpp
        #"Educational DP Contest/A.cpp"
        #TC-RGB_Street.cpp
        #TC-Maximal_Product.cpp
        )
#add_executable(Dynamic_Programming Factorial-HackerEarth.cpp "Educational DP Contest/A.cpp")
