cmake_minimum_required(VERSION 3.29)
project(Graph)

set(CMAKE_CXX_STANDARD 20)

add_executable(Graph #main.cpp
        #HE-Edge_Existence.cpp
        #HE-DFS_Unreachable_Nodes.cpp
        #CF1_170_A.cpp
        #CF2_549_C.cpp
        #CF2_542_C.cpp
        #BFS_Implementation.cpp
        #BFS_PathPrint.cpp
        CF1_192_B.cpp
)
