cmake_minimum_required(VERSION 3.24)
project(PrefixSum)

set(CMAKE_CXX_STANDARD 17)

add_executable(PrefixSum HoofPaperScissors_USACO.cpp)
#add_executable(PrefixSum BreedCounting_USACO.cpp )
#add_executable(PrefixSum  SubsequencesSummingtoSevens_USACO.cpp )
#add_executable(PrefixSum StaticRangeSum-LibraryChecker.cpp "Subsequences Summing to Sevens.cpp")
