cmake_minimum_required(VERSION 3.24)
project(PrefixSum)

set(CMAKE_CXX_STANDARD 17)

add_executable(PrefixSum AngryCyborg-CodeChef.cpp)
#add_executable(PrefixSum 433-B.cpp )
#add_executable(PrefixSum ForestQueries-CSES.cpp )
#add_executable(PrefixSum MaximumSubarraySum-CSES.cpp)
#add_executable(PrefixSum 1398-C.cpp)
#add_executable(PrefixSum  SubarraySums2-CSES.cpp )
#add_executable(PrefixSum  SubarraySum1-CSES.cpp)
#add_executable(PrefixSum HoofPaperScissors_USACO.cpp )
#add_executable(PrefixSum BreedCounting_USACO.cpp )
#add_executable(PrefixSum  SubsequencesSummingtoSevens_USACO.cpp )
#add_executable(PrefixSum StaticRangeSum-LibraryChecker.cpp "Subsequences Summing to Sevens.cpp")
