cmake_minimum_required(VERSION 3.29)
project(Primes)

set(CMAKE_CXX_STANDARD 20)

add_executable(Primes
        #BetaRound17-A.cpp
        #main.cpp
        #Primality.cpp
        #Prime_Factorization_1.cpp
        #Sieve.cpp
        #BetaRound26-A.cpp
        #CF1-B-109.cpp
        Prime_Calc.h
        CF-OnceUponATime-J.cpp
        #CF-103029-B.cpp
        #CF2-A-347.cpp
        #CF2-D-324.cpp
        #Round400-B.cpp
)
